--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,7 @@ body {
 
 .top-header .col-md-2 {
 	margin-top: 5px;
+	text-align: center;
 }
 
 .top-header .col-md-2 span {}
@@ -52,6 +53,7 @@ body {
 .top-header .col-md-2 span a {
 	border: 1px solid white;
 	padding: 5px;
+	background-color: transparent;
 	border-radius: 5px;
 	transition: 0.4s
 }
@@ -64,12 +66,20 @@ body {
 .top-header .col-md-2 span:last-child {
 	margin-left: 10px;
 }
-.top-header .col-md-1 i{
-	transition: 0.4s
+
+.top-header .col-md-1 {
+	text-align: right;
 }
-.top-header .col-md-1 a:hover i{
+
+.top-header .col-md-1 i {
+	transition: 0.4s;
+	float: right;
+}
+
+.top-header .col-md-1 a:hover i {
 	opacity: 0.5
 }
+
 .fa-whatsapp {
 	color: #0DC143
 }
@@ -80,4 +90,247 @@ body {
 
 .fa-envelope {
 	color: #fff
+}
+
+.bottom-header {
+	padding-top: 15px;
+	padding-bottom: 15px;
+	background-color: #404040;
+}
+
+.bottom-header .logo img {
+	margin-left: -11px;
+}
+
+.bottom-header h1::after {
+	content: "";
+	position: absolute;
+	width: 2px;
+	height: 100%;
+	background-color: #c3c3c3;
+	top: 0;
+	right: 0;
+	margin-right: -15px;
+}
+
+.bottom-header h1 {
+	position: relative;
+	text-align: center;
+	margin-top: 10px;
+	font-weight: 300;
+	letter-spacing: 1px;
+	color: aliceblue
+}
+
+.bottom-header ul {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	font-size: 0;
+	margin-top: 40px;
+}
+
+.bottom-header ul li {
+	display: inline-block;
+}
+
+.bottom-header ul li a {
+	color: aliceblue;
+	font-size: 18px;
+	transition: 0.2s
+}
+
+.bottom-header ul li a:hover {
+	opacity: 0.5;
+}
+
+.bottom-header ul li:nth-child(4) {
+	position: relative
+}
+
+.bottom-header ul li:not(:first-child) {
+	margin-left: 15px;
+}
+
+.inner-list {
+	position: absolute;
+	background-color: #404040;
+	left: 0;
+	top: 0;
+	width: 100%;
+	text-align: center;
+	display: none;
+	box-shadow: 0px 4px 6px 4px #ccc;
+	z-index: 10
+}
+
+ul.inner-list li {
+	display: block;
+	margin: 0;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-top: 15px;
+	padding-bottom: 15px;
+	border-bottom: 1px solid #ccc;
+}
+
+ul.inner-list li:not(:first-child) {
+	margin: 0;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-top: 15px;
+	padding-bottom: 15px;
+}
+
+.intro {
+	position: relative
+}
+
+.intro h2 {
+	font-weight: 300;
+	width: 100%;
+	text-align: center;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	color: black
+}
+
+.intro img {
+	-webkit-filter: grayscale(100%) contrast(150%);
+	width: 100%;
+	height: 550px;
+}
+
+.min,
+.max {
+	float: left;
+	clear: left;
+}
+
+.max {
+	margin-top: 15px;
+}
+
+.min label {
+	margin-right: 10px;
+}
+
+.max label {
+	margin-right: 8px;
+}
+
+.form {
+	margin-top: 20px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	padding-right: 10px;
+	border: 1px solid #013;
+	border-radius: 10px
+}
+
+.form .area {
+	float: left;
+	clear: left;
+	margin-top: 3px;
+}
+
+.form .area label {
+	margin-right: 15px;
+}
+
+.form .number-of-bedrooms label:first-of-type {
+	margin-right: 15px;
+	margin-left: 0;
+	cursor: default;
+}
+
+.form .number-of-bedrooms label:nth-of-type(2) {
+	margin-left: 0;
+}
+
+.form .number-of-bedrooms label {
+	margin-left: 28px;
+	cursor: pointer;
+	position: relative
+}
+
+.form .number-of-bedrooms {
+	float: left;
+	clear: left;
+	margin-top: 20px;
+}
+
+.form input,
+.form select {
+	border-radius: 3px;
+	border: 1px solid #013
+}
+
+.number-of-bedrooms {}
+
+.number-of-bedrooms input[type="checkbox"] {
+	display: none;
+}
+
+.number-of-bedrooms input[type="checkbox"] + label {}
+
+.number-of-bedrooms label:first-of-type::before {
+	display: none;
+}
+
+.number-of-bedrooms label::before {
+	content: "";
+	position: absolute;
+	width: 15px;
+	height: 15px;
+	border: 1px solid #000;
+	left: 0;
+	margin-left: 14px;
+	border-radius: 4px;
+	top: 2px;
+}
+
+.number-of-bedrooms input[type="checkbox"]:checked + label::after {
+	content: "";
+	width: 9px;
+	height: 9px;
+	position: absolute;
+	border: 1px solid #013;
+	background-color: #013;
+	left: 3px;
+	top: 5px;
+	margin-left: 14px;
+	border-radius: 4px;
+	z-index: 10
+}
+
+.beach-distance {
+	float: left;
+	clear: left;
+	margin-top: 3px;
+}
+
+.pool {
+	float: left;
+	clear: left;
+	margin-top: 19px;
+}
+
+.pool label,
+.beach-distance label {
+	margin-right: 15px;
+}
+
+.form button {
+	background-color: transparent;
+	margin-top: 2px;
+	width: 80px;
+	border: 1px solid #013;
+	border-radius: 5px;
+	transition: 0.3s;
+}
+
+.form button:hover {
+	color: aliceblue;
+	background-color: #013;
 }
