--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@ body textarea:required:valid {}
 
 body {
 	font-family: "RobotoRegular", "Arial", sans-serif;
+	background-color: #EBEBEC;
 }
 
 .top-header {
@@ -182,6 +183,10 @@ ul.inner-list li:not(:first-child) {
 	padding-bottom: 15px;
 }
 
+main {
+	background-color: #EBEBEC;
+}
+
 .intro {
 	position: relative
 }
@@ -333,4 +338,104 @@ ul.inner-list li:not(:first-child) {
 .form button:hover {
 	color: aliceblue;
 	background-color: #013;
+}
+
+.cards {
+	margin-top: 40px;
+}
+
+.card {
+	background-color: #fff;
+	border-radius: 15px;
+	overflow: hidden;
+}
+
+.card img {
+	width: 100%;
+}
+
+.card p {
+	text-align: center;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	font-size: 18px
+}
+
+.icons-span {
+	text-align: center;
+	margin-bottom: 10px;
+}
+
+.icons-span span {
+	font-size: 20px;
+	margin-left: 15px;
+}
+
+.icons-span i {
+	font-size: 17px;
+	color: darkgrey
+}
+
+.price-and-area-card {
+	padding: 10px;
+}
+
+.price-and-area-card .price {
+	padding: 10px 15px;
+	border: 1px solid #013;
+	border-radius: 6px;
+	float: left;
+}
+
+.price-and-area-card .price + span {
+	float: left;
+	font-size: 18px;
+	font-weight: lighter;
+	opacity: 0.5;
+	margin-top: 8px;
+	margin-left: 5px;
+}
+
+.area-card {
+	float: right;
+	color: #ccc;
+	font-size: 20px;
+	margin-top: 7px;
+}
+
+.card-img-wrapper {
+	position: relative;
+}
+
+.card-img-wrapper a {
+	position: absolute;
+	top: -99999px;
+	left: -99999px;
+	text-align: center;
+	box-sizing: border-box;
+	padding-top: 85px;
+	background-color: #c3c3c3;
+	width: 100%;
+	height: 100%;
+	color: transparent
+}
+
+.card:hover .card-img-wrapper a {
+	top: 0;
+	left: 0;
+	z-index: 10;
+	transition: 1s scale;
+	animation: anima 0.5s linear;
+	color: white
+}
+
+@keyframes anima {
+	0% {
+		background-color: transparent;
+		color: transparent
+	}
+	100% {
+		background-color: #c3c3c3;
+		color: white
+	}
 }
